--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -1,5 +1,5 @@
 // base class
-.nav {
+.rs-nav {
 	list-style: none;
 	margin: 0;
 	@include micro-clearfix();
@@ -20,7 +20,7 @@
 	z-index: $zindexNavPrimary;
 	@include noise;
 
-	.nav {
+	.rs-nav {
 		@include seam;
 		padding: 30px 0 10px 0;
 
@@ -91,7 +91,7 @@
 		display: block;
 	}
 
-	& + .nav {
+	& + .rs-nav {
 		padding-left: 190px;
 	}
 }
