--- a/lib/stylesheets/patterns/_nav-fixed.scss
+++ b/lib/stylesheets/patterns/_nav-fixed.scss
@@ -5,25 +5,25 @@
 	right: 0;
 	width: 100%;
 
-	&.nav-utility + .l-body {
+	&.rs-nav-utility + .l-body {
 		padding-top: $app-nav-utility-height;
 	}
 
-	&.nav-utility + &.rs-nav-primary {
+	&.rs-nav-utility + &.rs-nav-primary {
 		top: $app-nav-utility-height;
 		& + .l-body {
 			padding-top: $app-header-height;
 		}
 	}
 
-	&.nav-utility + &.nav-secondary {
+	&.rs-nav-utility + &.nav-secondary {
 		top: $app-nav-utility-height;
 		& + .l-body {
 			padding-top: $app-nav-utility-height + $app-nav-secondary-height;
 		}
 	}
 
-	&.nav-utility + &.rs-nav-primary + &.nav-secondary {
+	&.rs-nav-utility + &.rs-nav-primary + &.nav-secondary {
 		top: $app-header-height;
 		& + .l-body {
 			padding-top: $app-header-height + $app-nav-secondary-height;
@@ -47,7 +47,7 @@
 
 	// height based media query to remove app-frame for shorter view ports
 	@media only screen and (max-height: 600px){
-	  &.rs-nav-primary, &.nav-secondary, &.nav-utility {
+	  &.rs-nav-primary, &.nav-secondary, &.rs-nav-utility {
 	    position: static !important;
 	  }
 	  & ~ .l-body {
@@ -56,7 +56,7 @@
 	}
 	// width based media query to remove app-frame
 	@media only screen and (max-width: 1060px) {
-	  &.rs-nav-primary, &.nav-secondary, &.nav-utility {
+	  &.rs-nav-primary, &.nav-secondary, &.rs-nav-utility {
 	    position: static !important;
 	  }
 	  & ~ .l-body {
