Prefix secondary nav.

--- a/lib/stylesheets/patterns/_nav-secondary.scss
+++ b/lib/stylesheets/patterns/_nav-secondary.scss
@@ -1,5 +1,5 @@
 // Seconday Nav
-.nav-secondary {
+.rs-nav-secondary {
 	min-height: $app-nav-secondary-height;
 	z-index: $zindexNavSecondary;
 	@include noise;
