--- a/lib/stylesheets/patterns/_nav-fixed.scss
+++ b/lib/stylesheets/patterns/_nav-fixed.scss
@@ -16,14 +16,14 @@
 		}
 	}
 
-	&.rs-nav-utility + &.nav-secondary {
+	&.rs-nav-utility + &.rs-nav-secondary {
 		top: $app-nav-utility-height;
 		& + .l-body {
 			padding-top: $app-nav-utility-height + $app-nav-secondary-height;
 		}
 	}
 
-	&.rs-nav-utility + &.rs-nav-primary + &.nav-secondary {
+	&.rs-nav-utility + &.rs-nav-primary + &.rs-nav-secondary {
 		top: $app-header-height;
 		& + .l-body {
 			padding-top: $app-header-height + $app-nav-secondary-height;
@@ -34,20 +34,20 @@
 		padding-top: $app-nav-primary-height;
 	}
 
-	&.rs-nav-primary + &.nav-secondary {
+	&.rs-nav-primary + &.rs-nav-secondary {
 		top: $app-nav-primary-height;
 		& + .l-body {
 			padding-top: $app-nav-primary-height + $app-nav-secondary-height;
 		}
 	}
 
-	&.nav-secondary + .l-body {
+	&.rs-nav-secondary + .l-body {
 		padding-top: $app-nav-secondary-height;
 	}
 
 	// height based media query to remove app-frame for shorter view ports
 	@media only screen and (max-height: 600px){
-	  &.rs-nav-primary, &.nav-secondary, &.rs-nav-utility {
+	  &.rs-nav-primary, &.rs-nav-secondary, &.rs-nav-utility {
 	    position: static !important;
 	  }
 	  & ~ .l-body {
@@ -56,7 +56,7 @@
 	}
 	// width based media query to remove app-frame
 	@media only screen and (max-width: 1060px) {
-	  &.rs-nav-primary, &.nav-secondary, &.rs-nav-utility {
+	  &.rs-nav-primary, &.rs-nav-secondary, &.rs-nav-utility {
 	    position: static !important;
 	  }
 	  & ~ .l-body {
