--- a/lib/stylesheets/_utilities.scss
+++ b/lib/stylesheets/_utilities.scss
@@ -3,11 +3,11 @@
   @include box-shadow(#c2c2c2 0px 3px 8px 1px);
 }
 
-.pull-left, %pull-left {
+.pull-left {
   float: left;
 }
 
-.pull-right, %pull-right {
+.pull-right {
   float: right;
 }
 
@@ -20,11 +20,4 @@
 .quiet {
   color: #999;
   font-weight: normal;
-}
-
-%last-child {
-  & > *:last-child {
-    padding-bottom: 0;
-    margin-bottom: 0;
-  }
 }
