--- a/lib/stylesheets/patterns/_main.scss
+++ b/lib/stylesheets/patterns/_main.scss
@@ -3,7 +3,7 @@
   margin: 30px 0;
   @include micro-clearfix;
 
-  &.panel {
+  &.rs-panel {
     background-color: #f5f5f5;
     @include box-shadow(#c2c2c2 0px 6px 8px 1px);
     margin-top: 50px;
@@ -21,17 +21,17 @@
   .inner {
     padding: 0 30px 0 0;
 
-    .panel & {
+    .rs-panel & {
       padding: 30px 30px 0 30px;
     }
   }
 
-  &.pull-right {
+  &.rs-pull-right {
     float: right;
 
     .inner {
       padding: 0 0 0 30px;
-      .panel & {
+      .rs-panel & {
         padding: 30px 30px 0 30px;
       }
     }
@@ -45,7 +45,7 @@
     min-height: 300px;
   }
 
-  .panel & {
+  .rs-panel & {
     margin-top: -20px;
   }
 
@@ -53,7 +53,7 @@
     margin-left: 280px;
   }
 
-  .main .sidebar.pull-right + & {
+  .main .sidebar.rs-pull-right + & {
     margin-right: 280px;
     margin-left: 0;
   }
