Prefix layout classes.

--- a/lib/stylesheets/patterns/_footer.scss
+++ b/lib/stylesheets/patterns/_footer.scss
@@ -1,4 +1,4 @@
-.footer {
+.rs-footer {
   color: #999;
   font-size: 12px;
 
@@ -6,13 +6,13 @@
     color: #999;
   }
 
-  .link {
+  .rs-link {
     margin: 0;
     padding: 7px 0;
     display: inline-block;
   }
 
-  .links {
+  .rs-links {
     margin: 0;
     padding: 7px 0;
     float: left;
