--- a/lib/stylesheets/patterns/_nav-utility.scss
+++ b/lib/stylesheets/patterns/_nav-utility.scss
@@ -8,7 +8,7 @@
 	font-smoothing: antialiased;
 	z-index: $zindexNavUtility;
 
-	.l-container > .rs-nav {
+	.rs-container > .rs-nav {
 		float: left;
 
 		& > li {
