--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -1,6 +1,6 @@
 @import "compass";
 @import "compass/support";
-@import "normalize-css/normalize";
+@import "normalize-scss/normalize";
 
 @import "custom-fonts";
 @import "mixins";
