--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -26,6 +26,7 @@ input::-moz-focus-inner {
   &:hover,
   &.hover {
     text-decoration: none;
+    color: $grey-darker;
     background-color: #d7d7d7;
 
     @include background-image(linear-gradient($white, #d7d7d7));
@@ -60,6 +61,7 @@ input::-moz-focus-inner {
   &:hover,
   &.hover {
     background-color: #555;
+    color: $white;
 
     @include background-image(linear-gradient(#777, #555));
   }
@@ -91,6 +93,8 @@ input::-moz-focus-inner {
   &:hover,
   &.hover {
     background-color: #c40022;
+    color: $white;
+
     @include background-image(linear-gradient(#d81436, #c40022));
   }
 
@@ -119,6 +123,7 @@ input::-moz-focus-inner {
   &.hover {
     text-decoration: underline;
     background: transparent;
+    color: $blue;
   }
 
   &:active,
@@ -131,6 +136,7 @@ input::-moz-focus-inner {
   &.disabled {
     text-decoration: none;
     background: transparent;
+    color: $grey-light;
   }
 }
 
