--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -32,6 +32,11 @@
   text-transform: uppercase;
 }
 
+.rs-primary-dropdown .rs-icon-external,
+.rs-utility-dropdown .rs-icon-external-dark {
+  margin-top: 1px;
+}
+
 /** Primary Menu **/
 .rs-primary-dropdown {
   .rs-dropdown-menu {
@@ -56,10 +61,6 @@
         color: $red;
         background-color: #f5f5f5;
       }
-    }
-
-    .icon-external {
-      margin-left: 5px;
     }
   }
 
@@ -107,7 +108,8 @@
       &.hover {
         color: #fff;
         background-color: #444;
-        .icon-external {
+
+        .rs-icon-external-dark {
           @include icon-sprite(external-dark-hover);
         }
       }
@@ -120,11 +122,6 @@
       font-size: 12px;
       padding: 0;
     }
-  }
-
-  .icon-external {
-    @include icon-sprite(external-dark);
-    margin-left: 5px;
   }
 
   .rs-divider {
