--- a/lib/stylesheets/_sprites.scss
+++ b/lib/stylesheets/_sprites.scss
@@ -22,3 +22,9 @@ $icon-spacing: 10px;
 .rs-icon-external-dark {
   @include icon-sprite(external-dark);
 }
+
+.rs-icon-help {
+  @include icon;
+  @include icon-sprite(help);
+  margin-left: 5px;
+}
