--- a/lib/stylesheets/_layout.scss
+++ b/lib/stylesheets/_layout.scss
@@ -36,7 +36,7 @@ body {
 
   @include responsive(){
     width: auto;
-    @include max-screen($xlarge){
+    @include min-screen($large){
       & {
         padding: 0 $xlarge-padding;
       }
