[Bug][201] Remove colons from create forms.

--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -156,6 +156,10 @@ textarea {
 
 /* Create Forms */
 .rs-form-create {
+  label:after {
+    content: none;
+  }
+
   .rs-control-group,
   .rs-control-label {
     margin-bottom: 20px;
