[Bug][212] Fall back to base font family.

--- a/lib/stylesheets/_base.scss
+++ b/lib/stylesheets/_base.scss
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1, h2, h3, h4 {
-  font-family: 'Source Sans Pro';
+  font-family: $alt-font-family;
 }
 
 h1, h2, h3 {
