[Bug][203] Remove left and right padding from link buttons.

--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -115,6 +115,8 @@ input::-moz-focus-inner {
 }
 
 .rs-btn-link {
+  padding-left: 0;
+  padding-right: 0;
   color: $blue;
   background: transparent;
   border-color: transparent;
