[Feature][205] Add button group.

--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -209,3 +209,14 @@ input::-moz-focus-inner {
     }
   }
 }
+
+.rs-btn-group {
+  margin: 0 0 10px;
+  @include micro-clearfix;
+
+  > .rs-btn {
+    display: block;
+    float: left;
+    margin-right: 10px;
+  }
+}
