[Bug][202] Make link button height match other buttons.

--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -117,7 +117,7 @@ input::-moz-focus-inner {
 .rs-btn-link {
   color: $blue;
   background: transparent;
-  border: 0;
+  border-color: transparent;
 
   &:hover,
   &.hover {
