--- a/lib/stylesheets/_sprites.scss
+++ b/lib/stylesheets/_sprites.scss
@@ -16,7 +16,7 @@ $icon-spacing: 10px;
 }
 
 .rs-icon-external {
-  @include icon-sprite(external);
+  @include icon-sprite(external-blue);
 }
 
 .rs-icon-external-dark {
