--- a/lib/stylesheets/patterns/_main.scss
+++ b/lib/stylesheets/patterns/_main.scss
@@ -10,7 +10,7 @@
   }
 
   .rs-inner {
-    padding: 30px;
+    margin: 30px;
   }
 }
 
@@ -19,10 +19,10 @@
   float: left;
 
   .rs-inner {
-    padding: 0 30px 0 0;
+    margin: 0 30px 0 0;
 
     .rs-panel & {
-      padding: 30px 30px 0 30px;
+      margin: 30px;
     }
   }
 
@@ -30,9 +30,10 @@
     float: right;
 
     .rs-inner {
-      padding: 0 0 0 30px;
+      margin: 0 0 0 30px;
+
       .rs-panel & {
-        padding: 30px 30px 0 30px;
+        margin: 30px;
       }
     }
   }
