[Bug][218] Rename .rs-dropdown-toggle to .rs-caret.
The class .rs-dropdown-toggle is used by menu Javascript to
determine which element toggles menu visibility. Re-using the
class for the caret means that either the nav text styling
will be wrong OR only the caret can toggle visibility. This
introduces a new class name for caret icons.

--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -52,7 +52,7 @@
 				}
 	  	}
 
-	  	.rs-dropdown-toggle {
+	  	.rs-caret {
 	  		display: inline-block;
 	  		width: 13px;
 			  height: 13px;
@@ -61,7 +61,7 @@
 	  	}
 
 	  	&.rs-dropdown {
-	  		.rs-dropdown-toggle {
+	  		.rs-caret {
 	  			@include icon-sprite(caret-primary);
 	  		}
 
@@ -71,7 +71,7 @@
 	  	}
 
 	  	&.rs-dropdown.active {
-	  		.rs-dropdown-toggle {
+	  		.rs-caret {
 	  			@include icon-sprite(caret-primary-active);
 	  		}
 	  	}
