--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -25,11 +25,16 @@
 
 .rs-dropdown-category {
   display: block;
+  margin: 5px 0 0;
   padding: 0 7px;
   color: #999;
   font-size: 10px;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.rs-dropdown-menu > li:first-child > .rs-dropdown-category {
+  margin-top: 0;
 }
 
 .rs-primary-dropdown .rs-icon-external,
@@ -65,11 +70,15 @@
   }
 
   .rs-dropdown-category {
-    margin: 15px 0 0;
     padding: 0 15px;
     font-family: $alt-font-family;
     font-size: 12px;
     font-weight: 200;
+  }
+
+  .rs-dropdown-category,
+  .rs-dropdown-menu > li:first-child > .rs-dropdown-category {
+    margin: 15px 0 0;
   }
 
   .rs-dropdown-caption {
