--- a/lib/stylesheets/patterns/_nav-utility.scss
+++ b/lib/stylesheets/patterns/_nav-utility.scss
@@ -14,13 +14,18 @@
 		& > li {
 			position: relative;
 			margin: 0 30px 0 0;
+
+			&.active > a, &.active > a:hover {
+				color: $grey300;
+			}
+
 			& > a {
 				padding: 2px 0 1px;
-				color: #999;
+				color: $grey;
 				position: relative;
 				border: 1px solid transparent;
 				&:hover {
-					color: #ccc;
+					color: $grey300;
 				}
 			}
 		}
