[Bug][182] Set width so it is never narrower than toggle.

--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -1,5 +1,6 @@
 /** Action Menu **/
 .rs-dropdown {
+  position: relative;
   display: inline-block;
 
   a {
@@ -11,7 +12,7 @@
   position: absolute;
   margin: 0;
   padding: 3px 0;
-  min-width: 120px;
+  min-width: 100%;
   background-color: #fff;
   border: 1px solid $grey;
   list-style: none;
