[228][Bug] Allow primary menus to be used without categories.

--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -67,6 +67,10 @@
         background-color: #f5f5f5;
       }
     }
+
+    > li:first-child {
+      margin-top: 15px;
+    }
   }
 
   .rs-dropdown-category {
