Remove tooltip and menu animation due.
This is broken in bleeding edge versions of Chrome, and I
want to make sure the issue is addressed before re-adding
the transitions.

--- a/lib/stylesheets/_mixins.scss
+++ b/lib/stylesheets/_mixins.scss
@@ -53,8 +53,8 @@
   visibility: hidden;
   opacity: 0;
 
-  @include transition-property(visibility, opacity);
-  @include transition-duration($duration, $duration);
+  // @include transition-property(visibility, opacity);
+  // @include transition-duration($duration, $duration);
 
   &.hidden {
     display: block;
