--- a/lib/stylesheets/patterns/_nav-utility.scss
+++ b/lib/stylesheets/patterns/_nav-utility.scss
@@ -15,10 +15,6 @@
 			position: relative;
 			margin: 0 30px 0 0;
 
-			&.active > a, &.active > a:hover {
-				color: $grey300;
-			}
-
 			& > a {
 				padding: 2px 0 1px;
 				color: $grey;
@@ -27,6 +23,10 @@
 				&:hover {
 					color: $grey300;
 				}
+			}
+
+			&.active > a {
+				color: $grey300;
 			}
 		}
 
