--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -13,6 +13,7 @@
 @import "utilities";
 
 @import "patterns/buttons";
+@import "patterns/detail-view";
 @import "patterns/footer";
 @import "patterns/forms";
 @import "patterns/main";
