[Feature][236] Detail List

--- a/lib/stylesheets/patterns/_detail-view.scss
+++ b/lib/stylesheets/patterns/_detail-view.scss
@@ -138,3 +138,28 @@
 .rs-header-section-actions {
   @extend .rs-pull-right;
 }
+
+// Detail List
+.rs-detail-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.rs-detail-item {
+  margin: 0 0 10px;
+
+  @include micro-clearfix;
+}
+
+.rs-detail-key {
+  width: 120px;
+  clear: left;
+  float: left;
+  color: $grey;
+  text-align: right;
+}
+
+.rs-detail-value {
+  margin-left: 140px;
+}
