--- a/lib/stylesheets/patterns/_nav-secondary.scss
+++ b/lib/stylesheets/patterns/_nav-secondary.scss
@@ -19,19 +19,21 @@
 				margin-left: 0px;
 			}
 
-			&.active > a, &.active > a:hover {
-				color: $red;
-			}
-
 	  	& > a {
 	  		padding: 2px 6px;
 				color: $nav-primary-link;
 				text-decoration: none;
 				text-shadow: 0 1px $white;
-				&:hover {
-					color: $nav-primary-link-hover;
-				}
 	  	}
+
+			&:hover > a,
+	  	&.hover > a {
+				color: $nav-primary-link-hover;
+	  	}
+
+			&.active > a {
+				color: $red;
+			}
 	  }
 	}
 }
