[Feature][251] Add popover styles.

--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -22,4 +22,5 @@
 @import "patterns/nav-secondary";
 @import "patterns/nav-utility";
 @import "patterns/nav-fixed";
+@import "patterns/popover";
 @import "patterns/tooltip";
