--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -251,3 +251,8 @@ input::-moz-focus-inner {
     @include icon-sprite(pencil-999);
   }
 }
+
+.rs-detail-value .rs-edit {
+  margin-top: -1px;
+  margin-left: 20px;
+}
