--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -252,6 +252,7 @@ input::-moz-focus-inner {
   }
 }
 
+.rs-controls .rs-edit,
 .rs-detail-value .rs-edit {
   margin-top: -1px;
   margin-left: 20px;
