[Feature][252] Add class for displaying static content in a form.

--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -253,6 +253,7 @@ input::-moz-focus-inner {
 }
 
 .rs-controls .rs-edit,
+.rs-controls-static .rs-edit,
 .rs-detail-value .rs-edit {
   margin-top: -1px;
   margin-left: 20px;
