--- a/lib/stylesheets/patterns/_status.scss
+++ b/lib/stylesheets/patterns/_status.scss
@@ -1,6 +1,6 @@
 .rs-status {
-  display: inline-block;
-  padding: 0 5px;
+  display: inline;
+  padding: 3px 5px 4px;
   font-size: 13px;
   line-height: 20px;
   color: $white;
