--- a/lib/stylesheets/patterns/_tabs.scss
+++ b/lib/stylesheets/patterns/_tabs.scss
@@ -1,8 +1,8 @@
 .rs-tabs {
   list-style: none;
   margin: 0;
-  border-left: 1px solid #DDD;
-  border-bottom: 1px solid #DDD;
+  border-left: 1px solid $grey200;
+  border-bottom: 1px solid $grey200;
   @include micro-clearfix();
 
   & > li {
@@ -13,9 +13,9 @@
       display: block;
       padding: 10px;
       background-color: #EEE;
-      border-top: 1px solid #DDD;
-      border-right: 1px solid #DDD;
-      border-bottom: 1px solid #DDD;
+      border-top: 1px solid $grey200;
+      border-right: 1px solid $grey200;
+      border-bottom: 1px solid $grey200;
       color: #333;
       font-weight: bold;
 
@@ -25,15 +25,15 @@
     }
 
     &.active > a {
-      background-color: #FFF;
-      border-bottom: 1px solid #fff;
+      background-color: $white;
+      border-bottom: 1px solid $white;
     }
 
   }
 }
 
 .rs-tab-content {
-  border: 1px solid #DDD;
+  border: 1px solid $grey200;
   border-top: none;
 }
 
