Adding hover styles

--- a/lib/stylesheets/patterns/_tabs.scss
+++ b/lib/stylesheets/patterns/_tabs.scss
@@ -24,11 +24,14 @@
       }
     }
 
+    &:hover > a, &.hover > a {
+      background-color: #F7F7F7;
+    }
+
     &.active > a {
       background-color: $white;
       border-bottom: 1px solid $white;
     }
-
   }
 }
 
