[Feature][254] Progress Bars

--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -23,6 +23,7 @@
 @import "patterns/nav-utility";
 @import "patterns/nav-fixed";
 @import "patterns/popover";
-@import "patterns/tooltip";
+@import "patterns/progress";
 @import "patterns/status";
 @import "patterns/tabs";
+@import "patterns/tooltip";
