--- a/lib/stylesheets/patterns/_tabs.scss
+++ b/lib/stylesheets/patterns/_tabs.scss
@@ -11,7 +11,7 @@
 
     & > a {
       display: block;
-      padding: 10px;
+      padding: 5px 10px;
       background-color: #EEE;
       border-top: 1px solid $grey200;
       border-right: 1px solid $grey200;
