A bunch more thoughts and an example.

--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -16,6 +16,7 @@
 @import "patterns/detail-view";
 @import "patterns/footer";
 @import "patterns/forms";
+@import "patterns/list-table";
 @import "patterns/main";
 @import "patterns/menus";
 @import "patterns/nav-primary";
