Noting flexibility of the design requirements when using tables

--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -20,7 +20,7 @@ List Table Technical Requirements:
 
 Table Notes:
 
-* Does not support scrolling within a table.
+* Does not support scrolling within a table. (Flexible)
 * Auto lays out cells.
 * Can it support overlays?
 
